--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="grid">
           <figure class="effect-oscar">
             <!-- <img src="/image/5877337.jpg" alt="img09" /> -->
-            <img src="/image/5877337.jpg" alt="img09" />
+            <img src="image/5877337.jpg" alt="img09" />
             <figcaption>
               <h2>Warm <span>Oscar</span></h2>
               <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
@@ -286,7 +286,7 @@
       <div class="col-6 col-md-4">
         <div class="grid">
           <figure class="effect-oscar">
-            <img src="/image/5877337.jpg" alt="img09" />
+            <img src="image/5877337.jpg" alt="img09" />
             <figcaption>
               <h2>Warm <span>Oscar</span></h2>
               <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
@@ -298,7 +298,7 @@
       <div class="col-6 col-md-4">
         <div class="grid">
           <figure class="effect-oscar">
-            <img src="/image/5877337.jpg" alt="img09" />
+            <img src="image/5877337.jpg" alt="img09" />
             <figcaption>
               <h2>Warm <span>Oscar</span></h2>
               <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
@@ -310,7 +310,7 @@
       <div class="col-6 col-md-4">
         <div class="grid">
           <figure class="effect-oscar">
-            <img src="/image/5877337.jpg" alt="img09" />
+            <img src="image/5877337.jpg" alt="img09" />
             <figcaption>
               <h2>Warm <span>Oscar</span></h2>
               <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
@@ -322,7 +322,7 @@
       <div class="col-6 col-md-4">
         <div class="grid">
           <figure class="effect-oscar">
-            <img src="/image/5877337.jpg" alt="img09" />
+            <img src="image/5877337.jpg" alt="img09" />
             <figcaption>
               <h2>Warm <span>Oscar</span></h2>
               <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
@@ -334,7 +334,7 @@
       <div class="col-6 col-md-4">
         <div class="grid">
           <figure class="effect-oscar">
-            <img src="/image/5877337.jpg" alt="img09" />
+            <img src="image/5877337.jpg" alt="img09" />
             <figcaption>
               <h2>Warm <span>Oscar</span></h2>
               <p>Oscar is a decent man. He used to clean porches with pleasure.</p>
@@ -512,13 +512,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/image/gallery/1-3.jpg" class="d-block w-100" alt="...">
+              <img src="image/gallery/1-3.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/image/gallery/2-1.jpg" class="d-block w-100" alt="...">
+              <img src="image/gallery/2-1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/image/gallery/3-1 (1).jpg" class="d-block w-100" alt="...">
+              <img src="image/gallery/3-1 (1).jpg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
