--- a/book-an-appoiment.html
+++ b/book-an-appoiment.html
@@ -201,41 +201,7 @@
 
   <!-- *********************** header end **************************-->
 
-<!-- <div class="form-wrapper">
-    <h2>Book an Appointment</h2>
-    <form id="appointment-form">
-        <div class="form-field">
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first-name" required>
-        </div>
-        <div class="form-field">
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last-name" required>
-        </div>
-        <div class="form-field">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-field">
-            <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" name="phone" required>
-        </div>
-        <div class="form-field">
-            <label for="date">Preferred Date</label>
-            <input type="date" id="date" name="date" required>
-        </div>
-        <div class="form-field">
-            <label for="time">Preferred Time</label>
-            <input type="time" id="time" name="time" required>
-        </div>
-        <div class="form-field">
-            <label for="address">Address</label>
-            <textarea id="address" name="address" rows="4" required></textarea>
-        </div>
-        <button type="submit" class="button">Book Appointment</button>
-    </form>
-</div> -->
-<!-- test web3form start -->
+
 <div class="form-wrapper">
     <h2>Book an Appointment</h2>
     <form id="appointmentForm">
@@ -290,11 +256,12 @@
 
               const responseMessage = document.getElementById('responseMessage');
               if (response.ok) {
-                  responseMessage.innerHTML = `<p style="color: green;">${result.message}</p>`;
+                  // responseMessage.innerHTML = `<p style="color: green;">${result.message}</p>`;
+                  showThankYouModal();
                   form.reset(); // Form reset karein agar successful submission ho
-                  setTimeout(() => {
-                        responseMessage.innerHTML = '';
-                    }, 2000); // 2000 milliseconds = 2 seconds
+                  // setTimeout(() => {
+                  //       responseMessage.innerHTML = '';
+                  //   }, 2000); 
               } else {
                   responseMessage.innerHTML = `<p style="color: red;">Error: ${result.message}</p>`;
               }
@@ -303,30 +270,38 @@
               document.getElementById('responseMessage').innerHTML = `<p style="color: red;">An error occurred: ${error.message}</p>`;
           }
       });
+      // Function to show the modal
+      function showThankYouModal() {
+          const modal = document.getElementById('thankYouModal');
+          modal.style.display = "flex"; // Display the modal as flex to center it
+          // Close the modal when clicking on the close button
+          modal.querySelector('.close-button').addEventListener('click', function() {
+              modal.style.display = "none";
+          });
+          // Close the modal when clicking anywhere outside the modal content
+          window.addEventListener('click', function(event) {
+              if (event.target == modal) {
+                  modal.style.display = "none";
+              }
+          });
+          // Automatically hide the modal after 2 seconds
+          setTimeout(() => {
+              modal.style.display = "none";
+          }, 10000);
+      }
   </script>
 </div>
-
-
-<!-- scripts for submit form through ajax start -->
-
-
-
-<!-- scripts for submit form through ajax end -->
-
-
-
-
-<!-- test web3form end -->
-<!-- <div id="confirmation-popup" class="popup">
-    <div class="popup-content">
-        <span class="popup-close">&times;</span>
-        <div class="popup-icon">&#10004;</div>
-        <h2>Thank You!</h2>
-        <p>Your appointment has been booked successfully.</p>
-        <button id="close-popup" class="button">OK</button>
-    </div>
-</div> -->
-
+<!-- Modal Structure start -->
+<div id="thankYouModal" class="modal">
+  <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <div class="popup-icon">&#10004;</div>
+      <h2>Thank You!</h2>
+      <p>Your appointment has been booked successfully.</p>
+      <button class="button ">OK</button>
+  </div>
+</div>
+<!-- Modal Structure end -->
  
   <!-- whatsapp icon sticker start -->
   <div class="whatsapp-icon">
@@ -359,63 +334,7 @@
 
   <!-- *************************** Footer sectiuon end ********************-->
 
-  <script>
-    document.getElementById('appointment-form').addEventListener('submit', function(event) {
-    event.preventDefault();
-    document.getElementById('confirmation-popup').style.display = 'block';
-});
-
-document.getElementById('close-popup').addEventListener('click', function() {
-    document.getElementById('confirmation-popup').style.display = 'none';
-    document.getElementById('appointment-form').reset();
-});
-
-document.querySelector('.popup .close').addEventListener('click', function() {
-    document.getElementById('confirmation-popup').style.display = 'none';
-});
-
-  </script>
-    
-
-
-<script src="https://smtpjs.com/v3/smtp.js"></script>
-<script>
-  document.getElementById('appointment-form').addEventListener('submit', function(event) {
-    event.preventDefault(); // Prevent form submission
-
-    // Collect form data
-    var formData = {
-      FirstName: document.getElementById('name').value,
-      LastName: document.getElementById('name').value,
-      email: document.getElementById('email').value,
-      Phone: document.getElementById('phone').value,
-      PreferredDate:document.getElementById('date').value,
-      Preferredtime:document.getElementById('time').value,
-      Address: document.getElementById('address').value
-    };
-
-    // Send email using SMTP.js
-    Email.send({
-    Host : "smtp.elasticemail.com",
-    Username : "souravpoddar978@gmail.com",
-    Password : "**********0BD81",
-    To : 'souravpoddar978@gmail.com',
-    From : "souravpoddar978@gmail.com",
-    Subject : "This is the subject",
-      Body: "Firstname: " + formData.Firstname + "<br>Lastname: " + formData.Lastname + "<br>preferreddate: " + formData.PreferredDate +"preferredtime:" + formData.Preferredtime + "Address:" + formData.Address +  "Email:" + formData.email +" phone:" + formData.Phone
-    }).then(
-      function() {
-        alert("Email sent successfully!");
-        // Clear form fields
-        document.getElementById('contact-form').reset();
-      },
-      function(error) {
-        alert("Email not sent. Error: " + error);
-      }
-    );
-  });
-</script>
-
+  
 
 
    <script src="js/home.js"></script>
