--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         <div class="facebook-feed fb-card">
           <iframe
             src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2Fvideos%2F10153231379946729%2F&show_text=0&width=560"
-            width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            width="100%" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
             allowTransparency="true" allowFullScreen="true"></iframe>
         </div>
       </div>
