--- a/contactus.html
+++ b/contactus.html
@@ -252,21 +252,21 @@
             <h2 class="info-header">Contact Info</h2>
             <div class="info-section">
                 <div class="info-item">
-                    <span class="icon">&#x1F4CD;</span> <!-- Location Icon -->
+                  <span class="icon"><i class="fas fa-map-marked-alt"></i></span> <!-- Location Icon -->
                     <div class="details">
                         <h3>Our Location</h3>
                         <p>G-94, P C Colony, Kankarbagh, Opposite “Sri Ram” Hospital</p>
                     </div>
                 </div>
                 <div class="info-item">
-                    <span class="icon">&#x260E;</span> <!-- Phone Icon -->
+                  <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span> <!-- Phone Icon -->
                     <div class="details">
                         <h3>Phone Number</h3>
                         <p>+91-6200577751</p>
                     </div>
                 </div>
                 <div class="info-item">
-                    <span class="icon">&#x2709;</span> <!-- Email Icon -->
+                    <span class="icon"><i class="fas fa-envelope" aria-hidden="true"></i></span> <!-- Email Icon -->
                     <div class="details">
                         <h3>Email Address</h3>
                         <p>Souravpoddar978@gmail.com</p>
