--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
         <img src="" alt="Slide 1" id="img">
       </div>
     </div>
-    <div class="prev" onclick="prevSlide()"><i class="fas fa-chevron-left"></i></div>
-    <div class="next" onclick="nextSlide()"><i class="fas fa-chevron-right"></i></div>
+    <div class="prev"><i class="fas fa-chevron-left"></i></div>
+    <div class="next"><i class="fas fa-chevron-right"></i></div>
   </div>
 
 
