--- a/aboutdoctor.html
+++ b/aboutdoctor.html
@@ -7,7 +7,7 @@
   <title>Karuna | About Us</title>
 
   <!-- fav icon -->
-  <link rel="icon" href="image/favicon-32x32.png" type="image/x-icon">
+  <link rel="icon" href="image/fav-doctor-removebg-preview.png" type="image/x-icon">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <!-- bootstrap CDN  Link -->
