--- a/book-an-appoiment.html
+++ b/book-an-appoiment.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karuna | Book an Appointment</title>
+
+  <!-- fav icon -->
+  <link rel="icon" href="image/fav-doctor-removebg-preview.png" type="image/x-icon">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <!-- bootstrap CDN  Link -->
