--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 
   <!-- whatsapp icon sticker start -->
   <div class="whatsapp-icon">
-    <a href="https://wa.me/916200577751 target="_blank">
+    <a href="https://wa.me/916200577751 "target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp Icon">
     </a>
   </div>
