whatsa no change

--- a/contactus.html
+++ b/contactus.html
@@ -303,14 +303,14 @@
 
   <!-- whatsapp icon sticker start -->
   <div class="whatsapp-icon">
-    <a id="whatsapp-link" href="#" target="_blank">
+    <a href="https://wa.me/916200577751 "target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp Icon">
     </a>
   </div>
    <!-- whatsapp icon sticker  end-->
    <!-- call icon sticker start -->
    <div class="call-icon">
-    <a id="call-link" href="#" target="_blank">
+    <a href="tel:+916200577751" target="_blank">
       <img src="image/phone-call.png">
     </a>
     
