--- a/aboutdoctor.html
+++ b/aboutdoctor.html
@@ -244,7 +244,7 @@
         </div> 
        <!-- //second setion about doctor -->
         <div class="doctor-container">
-            <div class="about-section">
+            <div class="about-section about-section-md">
                 <div class="text-section">
                     <p>
                         To pursue his interest in joint replacement surgeries, he went to Switzerland to work with the Hip team at the biggest hospital in the country. There at Inselspital, he learned the newer techniques of “Hip Preservation Surgery”, an upcoming domain in India. He was also awarded a Fellowship by Dr. Prof. Siebenrock after the completion and returned to India. He is an executive body member of the Bihar Orthopedic Association and also a life member of the Indian Orthopedic Association.
