add call and whatsapp

--- a/knee-replacement.html
+++ b/knee-replacement.html
@@ -323,6 +323,17 @@
     
   
     <!-- Footer sectiuon end -->
+    <script src="js/home.js"></script>
+
+    <!-- plugins function code-->
+  
+  
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 2000
+        });
+    </script>
 
 
 </body>
