--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <a href="#">Video <i class="dropdown-icon">&#9662;</i></a>
         <div class="dropdown-content">
           <ul>
-            <li><a href="knee-replacement.html"onclick="window.location.href='knee-replacement.html'">Knee Replacement </a></li>
+            <li><a href="#">Service 1</a></li>
             <li><a href="#">Service 2</a></li>
           </ul>
         </div>
@@ -165,7 +165,7 @@
           <li>
             <a href="#" class="dropdown nav-link nav-orthopedic">Orthopedic Surgeries</a>
             <ul class="sub-submenu nav-orthopedic-submenu">
-              <li><a href="#" class="nav-link nav-orthopedic-1">Submenu 1</a></li>
+              <li><a href="knee-replacement.html"onclick="window.location.href='knee-replacement.html'">Knee Replacement </a></li>
               <li><a href="#" class="nav-link nav-orthopedic-2">Submenu 2</a></li>
             </ul>
           </li>
