--- a/knee-replacement.html
+++ b/knee-replacement.html
@@ -205,7 +205,7 @@
             <div class="unique-ourservice-col">
                 <h4>What is Knee Replacement?</h4>
                 <div class="unique-img-section">
-                    <img src="image/images-that-simulate-x-rays-with-neon-colors.jpg" alt="img">
+                    <img src="image/knee.jpeg" alt="img">
                 </div>
                 <div class="unique-ourservice-text">
                     <p>Knee replacement surgery is also known as knee arthroplasty or total knee replacement. Severe knee injury or arthritis may cause this type of surgery. Dr. Ashwini Gaurav is one of the leading knee replacement surgeons in Patna. The goal of knee replacement surgery is to reshape the knee joints and relieve knee pain.</p>
