update tex size

--- a/book-an-appoiment.html
+++ b/book-an-appoiment.html
@@ -92,13 +92,13 @@
               <h4 class="abhi-heading">Orthopedic Surgeries</h4>
               <ul class="list-group abhi-list-icon">
                 <div class="d-flex flex-column abhi-list">
-                  <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Knee Replacement </a>
-                  <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Hip Replacement </a>
-                  <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">ACL Reconstruction </a>
-                  <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Arthroscopy Surgery</a>
-                  <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Trauma Surgery</a>
-                  <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Sports Injury Treatment</a>
-                  
+                    <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="knee-replacement.html"onclick="window.location.href='knee-replacement.html'">Knee Replacement </a>
+                    <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Hip Replacement </a>
+                    <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">ACL Reconstruction </a>
+                    <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Arthroscopy Surgery</a>
+                    <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Trauma Surgery</a>
+                    <li class="d-flex align-items-center "><i class="fas fa-caret-right"></i><a href="#">Sports Injury Treatment</a>
+                    
                 </div>
               </ul>
             </div>
